# daily_brief

./: .env.example  .gitignore  README.md  com.daily-brief.plist  daily_brief.py  install.sh  pyproject.toml  requirements.txt  run.sh
docs/: prd.html  prd.md
